--- a/simcon_project/templates/registration/login.html
+++ b/simcon_project/templates/registration/login.html
@@ -24,7 +24,7 @@
                 {{ form.non_field_errors }}
                 <div class="form-group">
 
-                    <label for="{{ form.username.id_for_label }}">Username:</label>
+                    <label for="{{ form.username.id_for_label }}">Email:</label>
                     <br>
                     {{ form.username }}
                     {{ form.username.errors }}
