--- a/simcon_project/templates/student_management.html
+++ b/simcon_project/templates/student_management.html
@@ -3,20 +3,20 @@
 {% block nav-studentmanagementView %}<strong class="nav_bar_selected"> Students </strong>{% endblock %}
 {% load render_table from django_tables2 %}
 {% block content %}
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <!-- prevent line breaks when using form fields -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- prevent line breaks when using form fields -->
 
-        <title>
-            SimCon | Student
-        </title>
-        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-        <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
+    <title>
+        SimCon | Student
+    </title>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
 
-    </head>
-    <body>
+</head>
+<body>
 
     <div class="container-fluid mt-3" style="width: 80%">
         <div class="row">
@@ -29,7 +29,7 @@
                             <div class="row">
                                 <div class="col pl-0 pr-0">
                                     <select class="student-select-multiple w-100" name="Students" multiple="multiple">
-                                        {% for student in add_students%}
+                                        {% for student in add_students %}
                                             <option value="{{ student.id }}">{{ student.email }}</option>
                                         {% endfor %}
                                     </select>
@@ -41,7 +41,11 @@
                         </form>
                     </div>
                     <div class="col-3" style="text-align: right">
-                        <button id="create-student" class="btn btn-outline-secondary" type="button" name="button">Register Student</button>
+                            <button id="create-student" class="bs-modal btn btn-outline-secondary" type="button"
+                                    name="button"
+                                    data-form-url="{% url 'create-students' %}">
+                                Register Student
+                            </button>
                     </div>
                 </div>
                 <div class="table-container" >
@@ -92,13 +96,8 @@
                 });
             });
             $('.student-select-multiple').select2();
-            $("#create-student").modalForm({
-                formURL: "{% url 'create-student'%}",
-                modalID: "#create_modal"
-            });
         });
-
     </script>
-    </body>
-    </html>
+</body>
+</html>
 {% endblock %}
