Student deletion work. If student has only been added by one researcher, then deletion removes them from the db. If they have more than one, the student is removed from the researcher's labels and assignments, and all their responses to the researcher's templates are deleted.

--- a/simcon_project/templates/student_delete_modal.html
+++ b/simcon_project/templates/student_delete_modal.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="modal-body">
-    <p>This student will be deleted permanently.</p>
+    <p>This student will be deleted from your student list along with any responses they've made to your templates.</p>
   </div>
 
   <div class="modal-footer">
