Added password checks for new user registration

--- a/simcon_project/templates/student_creation_modal.html
+++ b/simcon_project/templates/student_creation_modal.html
@@ -86,7 +86,7 @@ function add_student(email) {
             }
             else {
                 document.getElementById("alert").hidden = false;
-                document.getElementById("alert-text").innerHTML = "Student already added";
+                document.getElementById("alert-text").innerHTML = "Student already registered";
             }
         },
         error: function(XMLHttpRequest, textStatus, errorThrown) {
