query checks and updates

--- a/simcon_project/templates/student_creation_modal.html
+++ b/simcon_project/templates/student_creation_modal.html
@@ -82,7 +82,7 @@ function add_student(email) {
             }
             else if (data.success == 1) {
                  document.getElementById("alert").hidden = false;
-                document.getElementById("alert-text").innerHTML = "Invalid student email";
+                document.getElementById("alert-text").innerHTML = "Email belongs to a researcher";
             }
             else {
                 document.getElementById("alert").hidden = false;
