--- a/simcon_project/templates/response_delete_modal.html
+++ b/simcon_project/templates/response_delete_modal.html
@@ -16,8 +16,8 @@
   </div>
 
   <div class="modal-footer">
-    <button type="submit" class="btn btn-danger">Delete Response</button>
-    <button type="submit" name="reassign" class="btn btn-success">Delete & Notify Response</button>
+    <button type="submit" class="btn btn-secondary">Delete Response</button>
+    <button type="submit" name="reassign" class="btn btn-secondary">Delete & Notify Response</button>
   </div>
 
 </form>
