--- a/simcon_project/templates/template_all_responses_view.html
+++ b/simcon_project/templates/template_all_responses_view.html
@@ -40,7 +40,7 @@
                 </form>
             </div>
             <div class="col" style="text-align: center">
-                <a class="btn btn-outline-primary" href="{% export_url 'xlsx' %}" title="Download as .xls">
+                <a class="btn btn-outline-secondary" href="{% export_url 'xlsx' %}" title="Download as .xls">
                     Download</a>
             </div>
         </div>
