--- a/simcon_project/templates/student_registration.html
+++ b/simcon_project/templates/student_registration.html
@@ -74,7 +74,7 @@
                         </div>
 
                         <div class="row mb-3">
-                            <button type="submit" class="btn btn-success">Submit</button><br/><br/>
+                            <button type="submit" class="btn btn-secondary">Submit</button><br/><br/>
                         </div>
                     </div>
                 </form>
