--- a/simcon_project/templates/template_management/main_view.html
+++ b/simcon_project/templates/template_management/main_view.html
@@ -67,7 +67,7 @@
                         <!-- Create Template Button--->
                         <form action="{% url 'management:redirect-to-template-creation' %}" method="post">
                             {% csrf_token %}
-                            <input id="create-template" class="btn btn-outline-secondary" type="submit" value="Create template"/>
+                            <input id="create-template" class="btn btn-outline-secondary" type="submit" value="Create Template"/>
                         </form>
                     </div>
                 </div>
