--- a/simcon_project/templates/response_delete_modal.html
+++ b/simcon_project/templates/response_delete_modal.html
@@ -11,13 +11,12 @@
   <div class="modal-body">
     <p> <strong> Template Name: </strong> {{ template_name }} <br>
        <strong> Student Name: </strong> {{ student }} <br>
-        Would you like to notify {{ student }} that this template is available for resubmission? 
       </p>
   </div>
 
   <div class="modal-footer">
-    <button type="submit" class="btn btn-danger">Delete Response</button>
-    <button type="submit" name="reassign" class="btn btn-success">Delete & Notify Response</button>
+    <button type="submit" class="btn btn-secondary">Delete</button>
+    <button type="submit" name="reassign" class="btn btn-secondary">Delete & Reassign</button>
   </div>
 
 </form>
